# CANN

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  README.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  build.sh  classify_rule.yaml  install_deps.sh  requirements.txt  version.cmake
attention/nsa_compress_attention/tests/: CMakeLists.txt
attention/prompt_flash_attention/op_host/: CMakeLists.txt  prompt_flash_attention_def.cpp  prompt_flash_attention_infershape.cpp  prompt_flash_attention_tiling.cpp  prompt_flash_attention_tiling.h  prompt_flash_attention_tiling_arch38.cpp  prompt_flash_attention_tiling_arch38.h  prompt_flash_attention_tiling_compile_info.h  prompt_flash_attention_tiling_const.h  prompt_flash_attention_tiling_context.h  prompt_flash_attention_tiling_register.cpp  prompt_flash_attention_tiling_struct.h  prompt_flash_attention_tiling_v2.cpp  prompt_flash_attention_tiling_v2.h
common/: CMakeLists.txt
common/include/common/: aicpu_op_def.h
common/include/err/: ops_err.h
common/include/fallback/: fallback.h  fallback_2stages.h  fallback_comm.h  fallback_comm_2stages.h
common/include/framework/: onnx_common.h
common/include/op_api/: op_api_def.h
common/include/op_graph/: op_transformer_proto_extend.h
common/include/op_host/: data_copy_transpose_tiling.h  data_copy_transpose_tiling_def.h  tiling_base.h  tiling_key.h  tiling_templates_registry.h  tiling_type.h  tiling_util.h
common/include/op_kernel/: attention_ffn_schedule.h  common.h  common_func.h  dropmask.h  gm_to_l1_iterator.h  gm_to_ub_iterator.h  hardware.h  iterator.h  l0c_to_gm_iterator.h  l0c_to_l1_iterator.h  l0c_to_ub_iterator.h  l1_to_bt_iterator.h  l1_to_fb_iterator.h  l1_to_l0_iterator.h  l1_to_ub_iterator.h  layout.h  mem.h  mma.h  pse.h  simd.h  util.h
common/include/static/: op_resource.h  static_space.h
common/include/tiling_sink/: device_op_impl_registry_impl.h  tiling_aicpu_task.h
common/include/util/: tensor_util.cpp  tensor_util.h
common/src/fallback/: fallback_comm.cpp  fallback_comm_2stages.cpp
common/src/framework/: CMakeLists.txt  embedding_bag_onnx_plugin.cpp  fillwindowcache_onnx_plugin.cpp  multi_head_attention_onnx_plugin.cpp  npu_fused_attention_score_fwd_onnx_plugin.cpp  npu_fused_attention_score_onnx_plugin.cpp  npu_masked_softmax_with_relposbias_onnx_plugin.cpp  npu_scaled_masked_softmax_onnx_plugin.cpp  tfidf_vectorizer_onnx_plugin.cpp
common/src/op_host/: tiling_util.cpp
common/src/tiling_sink/: CMakeLists.txt  tiling_sink_registry.cpp
common/stub/: CMakeLists.txt
common/stub/op_api/: CMakeLists.txt  opapi_stub.cpp
common/stub/op_graph/: CMakeLists.txt  math_proto_stub.cpp
common/stub/op_tiling/: CMakeLists.txt  runtime_kb_api.cpp  runtime_kb_api.h  tbe_tiling_api.cpp  tbe_tiling_api.h
examples/fast_kernel_launch_example/: CMakeLists.txt  README.md  build_and_test.sh  requirements.txt  setup.py
examples/fast_kernel_launch_example/ascend_ops/: __init__.py  moe_distribute.py  ops.py
examples/fast_kernel_launch_example/cmake/: ascend.cmake  func.cmake  python.cmake  torch.cmake  torch_npu.cmake
examples/fast_kernel_launch_example/csrc/: CMakeLists.txt  extension.cpp
examples/flash_attn_example/: CMakeLists.txt  README.md  requirements.txt  setup.py
examples/flash_attn_example/ascend_ops/: __init__.py  ops.py
experimental/mc2/common/: CMakeLists.txt
experimental/mc2/quant_all_reduce/: CMakeLists.txt  README.md  quant_all_reduce.cpp  quant_all_reduce.h  run.sh  start.sh  test_quant_all_reduce.cpp
experimental/mhc/mhc_post/: CMakeLists.txt  README.md  mhc_post_ops.py  setup.py
experimental/moe/biasgategelu/: BIAS_GATE_GELU.cpp  CMakeLists.txt  README.md
experimental/moe/final_routing/: CMakeLists.txt  README.md  final_routing.cpp
experimental/moe/fusedexpert/: CMakeLists.txt  FUSED_EXPERT.cpp  README.md
experimental/moe/gategelu_quant/: CMakeLists.txt  GATEGELU_QUANT2D_SBUF.cpp  README.md
experimental/moe/get_routing_conf/: CMakeLists.txt  (+2 more)
experimental/npu_ops_transformer_ext/: CMakeLists.txt  README.md  build_log.txt  requirements.txt  setup.py
mc2/: CMakeLists.txt
mc2/3rd/: CMakeLists.txt
mc2/all_gather_matmul/: CMakeLists.txt  README.md
mc2/all_gather_matmul_v2/: CMakeLists.txt  README.md
mc2/allto_all_all_gather_batch_mat_mul/: README.md
mc2/allto_all_matmul/: CMakeLists.txt  README.md
mc2/allto_allv_grouped_mat_mul/: README.md
mc2/allto_allv_quant_grouped_mat_mul/: README.md
mc2/attention_to_ffn/: README.md
mc2/batch_mat_mul_reduce_scatter_allto_all/: CMakeLists.txt  README.md
mc2/common/: CMakeLists.txt
mc2/distribute_barrier/: README.md
mc2/distribute_barrier_extend/: README.md
mc2/engram_fetch/: CMakeLists.txt
mc2/engram_fetch_wait/: CMakeLists.txt
mc2/ffn_to_attention/: README.md
mc2/grouped_mat_mul_all_reduce/: README.md
mc2/grouped_mat_mul_allto_allv/: README.md
mc2/inplace_matmul_all_reduce_add_rms_norm/: README.md
mc2/matmul_all_reduce/: CMakeLists.txt  README.md
mc2/matmul_all_reduce_add_rms_norm/: README.md
mc2/matmul_allto_all/: README.md
mc2/matmul_reduce_scatter/: CMakeLists.txt  README.md
mc2/matmul_reduce_scatter_v2/: README.md
mc2/mega_moe/: README.md
mc2/moe_distribute_combine/: README.md
mc2/moe_distribute_combine_add_rms_norm/: README.md
mc2/moe_distribute_combine_setup/: README.md
mc2/moe_distribute_combine_teardown/: CMakeLists.txt  README.md
mc2/moe_distribute_combine_v2/: README.md
mc2/moe_distribute_combine_v3/: README.md
mc2/moe_distribute_dispatch/: README.md
mc2/moe_distribute_dispatch_setup/: CMakeLists.txt  README.md
mc2/moe_distribute_dispatch_teardown/: README.md
mc2/moe_distribute_dispatch_v2/: README.md
mc2/moe_distribute_dispatch_v3/: README.md
mc2/moe_ep_combine/: CMakeLists.txt
mc2/moe_update_expert/: README.md
mc2/quant_all_reduce/: CMakeLists.txt  README.md
mc2/quant_grouped_mat_mul_allto_allv/: README.md
mc2/quant_reduce_scatter/: README.md
mc2/tools/: CMakeLists.txt
(+9136 files in other folders)
