# -----------------------------------------------------------------------------------------------------------
# Copyright (c) 2026 Huawei Technologies Co., Ltd.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# -----------------------------------------------------------------------------------------------------------

file(GLOB SUBDIRECTORIES LIST_DIRECTORIES true RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)

# 用于保证3rd common在mc2算子内加载，使得MC2_COMPILE生效
set(MC2_EXCLUDE_DIRS 3rd common)
# 先遍历算子目录
foreach(SUBDIR ${SUBDIRECTORIES})
  # 检查子目录中是否存在 CMakeLists.txt
  if(NOT ${SUBDIR} IN_LIST MC2_EXCLUDE_DIRS
     AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${SUBDIR}/CMakeLists.txt
    )
    add_subdirectory(${SUBDIR})
    if(DEFINED ${SUBDIR}_depends)
        set(${SUBDIR}_depends "${${SUBDIR}_depends}" PARENT_SCOPE)
    endif()
  endif()
endforeach()

# 再遍历公共目录
foreach(SUBDIR ${SUBDIRECTORIES})
if(${SUBDIR} IN_LIST MC2_EXCLUDE_DIRS
   AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${SUBDIR}/CMakeLists.txt
  )
  add_subdirectory(${SUBDIR})
endif()
endforeach()